# crabculator

./: .gitignore  .mcp.json  Cargo.toml  NOTICE  README.md  deny.toml
.claude/: .gitignore  CLAUDE.md  settings.json
.github/workflows/: ci.yml
.serena/: project.yml
.spox/: .gitignore  config.toml
specs/: .gitignore  mission.md
specs/error-display/: spec.md
specs/eval/base-literals/: spec.md
specs/eval/built-in-functions/: spec.md
specs/eval/constants/: spec.md
specs/eval/expression-eval/: spec.md
specs/eval/extended-functions/: spec.md
specs/eval/factorial/: spec.md
specs/eval/implicit-multiplication/: spec.md
specs/expression-editor/: spec.md
specs/expression-eval/: spec.md
specs/project-setup/: spec.md
specs/setup/project-setup/: spec.md
specs/state-persistence/: spec.md
specs/storage/state-persistence/: spec.md
specs/tui-shell/: spec.md
specs/ui/error-display/: spec.md
specs/ui/expression-editor/: spec.md
specs/ui/memory-pane/: spec.md
specs/ui/tui-shell/: spec.md
src/: app.rs  lib.rs  main.rs  terminal.rs
src/editor/: buffer.rs  cursor.rs  mod.rs
src/eval/: ast.rs  constants.rs  context.rs  error.rs  evaluator.rs  mod.rs  parser.rs  token.rs
src/storage/: mod.rs  paths.rs  state.rs
src/ui/: highlight.rs  layout.rs  mod.rs  render.rs  theme.rs
tests/: integration.rs
