[package]
name = "crabculator"
authors = ["marconae"]
version = "0.2.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
