[package]
name = "crabculator"
authors = ["marconae"]
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
terminal-colorsaurus = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
