[package]
name = "crabculator"
authors = ["marconae"]
version = "0.5.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
dirs = "6"
terminal-colorsaurus = "1.0"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
